# engenharia-de-dados

./: README.md  pyproject.toml
Aula_01/: README.md
Aula_01.1/: README.md
Aula_01.2/: README.md
Aula_02/: README.md  dataFrame.py
Aula_03/: README.md
Aula_04/: README.md  dados_limpos.csv  dataFrame.py
Aula_05/: README.md
Aula_05/code/: data_preparation.py  merge_data.py
Aula_05/data/merged/: result_chicago_merge.csv
Aula_05/data/processed/: cleaned_chicago_built_data.csv  cleaned_chicago_house_price_data.csv
Aula_05/data/raw/: chicago_built_data.csv  chicago_house_price_data.csv
Aula_07/: README.md
Aula_08/: README.md
Aula_08/exer_01_GCS/code/: create_GCS.py  read_GCS.py
Aula_08/exer_01_GCS/data/raw/: price_data.csv
Aula_08/exer_02_BQ/: create_bg.py
Aula_09/: README.md  dataFrame.py
Aula_11/: README.md
Aula_11/code/: data_preparation.py  merge_data.py
Aula_11/data/merged/: .part-00000-641840b4-a95d-4818-9998-ba5c8c6a98d9-c000.csv.crc  part-00000-641840b4-a95d-4818-9998-ba5c8c6a98d9-c000.csv
Aula_11/data/processed/cleaned_chicago_built/: .part-00000-5a86f372-f8e0-4ea1-a3c2-6d3f6f5c74b2-c000.csv.crc  .part-00000-ec710eca-016f-4b76-8883-7f8a77a59cc1-c000.csv.crc  part-00000-5a86f372-f8e0-4ea1-a3c2-6d3f6f5c74b2-c000.csv  part-00000-ec710eca-016f-4b76-8883-7f8a77a59cc1-c000.csv
Aula_11/data/raw/: chicago_built_data.csv  chicago_house_price_data.csv
Aula_12/: README.md
Aula_12/code/: exer01.py
Aula_12/data/raw/: gapminder2007_data.csv
(+4 files in other folders)
